[tool.poetry]
name = "trip-map"
version = "0.1.0"
description = ""
authors = ["adrnbttr <adrnbttr@gmail.com>"]
maintainers = ["adrnbttr <adrnbttr@gmail.com>"]
license = ""
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.0"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
Markdown = "^3.3.4"
python-dotenv = "^0.19.0"
Pygments = "^2.9.0"
dash-leaflet = "^0.1.23"
protobuf = "^3.20"
apache-airflow = "^2.5.1"
neomodel = "^4.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
